--- a/leadership.html
+++ b/leadership.html
@@ -44,12 +44,12 @@
 
             <div class="logo light_logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/prospello-logo2-02.svg" alt="">
                 </a>
             </div>
             <div class="logo dark_logo">
                 <a href="index.html">
-                    <img src="images/logo-dark.png" alt="">
+                    <img src="images/prospello-logo2-02.svg" alt="">
                 </a>
             </div>
 
