--- a/business-1.html
+++ b/business-1.html
@@ -110,7 +110,7 @@
 
         <!-- Header -->
         <header class="dsn-header-hero">
-            <div class="hero-img cover-bg" data-image-src='images/tec.jpeg' style="background-position: revert;"></div>
+            <div class="hero-img cover-bg" data-image-src='#' style="background-position: revert;"></div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
                     <div class="col-12">
@@ -180,8 +180,7 @@
         </div>
 
     </main>
-
-    <!-- cursor -->
+  
     <!-- cursor -->
     <div class="global-cursor">
         <div class="custom-cursor single-cursor">
