--- a/business-2.html
+++ b/business-2.html
@@ -15,8 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
 
-    <link rel="shortcut icon" href="images/prospello-logo2-02.svg" type="image/x-icon" />
-    <link rel="icon" href="images/prospello-logo2-02.svg" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
     <!-- custom styles (optional) -->
     <link href="css/plugins.css" rel="stylesheet" />
@@ -62,9 +61,8 @@
                     <span class="menu-icon__line"></span>
                     <span class="menu-icon__line menu-icon__line-right"></span>
                 </div>
-            </div>            
+            </div>           
         </div>
-        
     </div>
     <div class="site-header">
         <div class="extend-container">
@@ -112,14 +110,14 @@
 
         <!-- Header -->
         <header class="dsn-header-hero">
-            <div class="hero-img cover-bg" data-image-src='images/communications.jpg' style="background-position: revert;"></div>
+            <div class="hero-img cover-bg" data-image-src='#' style="background-position: revert;"></div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
                     <div class="col-12">
                         <div class="header-content">
                             <h4 class="subtitle text-center"></h4>
                             <div class="name-title justify-content-center">
-                                <h1><span>PROSPELLO COMMUNICATIONS PVT LTD </span></h1>
+                                <h1><span>prospello technologies pvt ltd </span></h1>
                             </div>
                         </div>
 
@@ -154,7 +152,9 @@
 prospello which is a go-to establishment for the very best in branding, marketing, advertising and
 communications services and products. A company which is highly dedicated in providing the
 customers with the very best of whatever it is that they want to brand, advertise, or market their
-companies, with an emphasis on the quality of the product, strategy, design and service</p>
+companies, with an emphasis on the quality of the product, strategy, design and service
+<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa perferendis explicabo inventore molestiae libero velit accusamus asperiores quo eaque nostrum. Praesentium magni aspernatur, rem adipisci atque ut aliquid incidunt ex, error assumenda. Ex commodi necessitatibus ab dolores. Non in commodi expedita nostrum iure aliquid magnam velit explicabo molestias et assumenda deserunt excepturi deleniti doloribus nam quidem quaerat id officia sint asperiores ratione error, ipsa? Id facilis repudiandae ipsam illum necessitatibus tenetur consectetur quaerat iure nemo eum aut esse nam sed, ipsa distinctio quis in maiores dolorem porro earum obcaecati saepe. Facilis aliquam voluptatum quidem. Voluptatem velit omnis id dolore itaque.
+</p>
 
                             <a href="project-1.html#" target="_blank" class="t-link">
                                 <div class=""><span class="">View More</span>
@@ -178,8 +178,7 @@ companies, with an emphasis on the quality of the product, strategy, design and 
         </div>
 
     </main>
-
-    <!-- cursor -->
+  
     <!-- cursor -->
     <div class="global-cursor">
         <div class="custom-cursor single-cursor">
