--- a/community.html
+++ b/community.html
@@ -112,7 +112,7 @@
 
         <!-- Header -->
         <header class="dsn-header-hero">
-            <div class="hero-img cover-bg" data-image-src='images/charity.jpg' style="background-position: left center;"></div>
+            <div class="hero-img cover-bg" data-image-src='#' style="background-position: left center;"></div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
                     <div class="col-12">
