--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="project-info">
                             <h3 class="subtitle">Technology</h3>
                             <div class="name-title">
-                                <h1 style="font-size: 40px;"><span>Prospello Technologies Pvt LTD</span></h1>
+                                <h1><span>Prospello Technologies Pvt LTD</span></h1>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                         <div class="project-info">
                             <h3 class="subtitle">Integrated Marketing and Communication </h3>
                             <div class="name-title" data-overlay="4">
-                                <h1 style="font-size: 40px;"><span>Prospello Communications PvT LTD</span></h1>
+                                <h1><span>Prospello Communications PvT LTD</span></h1>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         <div class="project-info">
                             <h3 class="subtitle">Education</h3>
                             <div class="name-title">
-                                <h1 style="font-size: 40px;"><span>Heu learn LLP</span></h1>
+                                <h1><span>Heu learn LLP</span></h1>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         <div class="project-info">
                             <h3 class="subtitle">Community | Organization </h3>
                             <div class="name-title">
-                                <h1 style="font-size: 40px;"><span>Prospello Charitable Foundation </span></h1>
+                                <h1><span>Prospello Charitable Foundation </span></h1>
                             </div>
                         </div>
                     </div>
