--- a/business-3.html
+++ b/business-3.html
@@ -111,7 +111,7 @@
 
         <!-- Header -->
         <header class="dsn-header-hero">
-            <div class="hero-img cover-bg" data-image-src='images/hulearn.jpeg' style="background-position: revert;"></div>
+            <div class="hero-img cover-bg" data-image-src='#' style="background-position: revert;"></div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
                     <div class="col-12">
