--- a/leadership.html
+++ b/leadership.html
@@ -124,7 +124,7 @@
 
         <!-- Header -->
         <header class="dsn-header-hero">
-            <div class="hero-img cover-bg" data-image-src='images/leader.jpg' style="background-position: revert;"></div>
+            <div class="hero-img cover-bg" data-image-src='#' style="background-position: revert;"></div>
             <div class="container h-100">
                 <div class="row align-items-center h-100">
                     <div class="col-12">
