--- a/business-2.html
+++ b/business-2.html
@@ -117,7 +117,7 @@
                         <div class="header-content">
                             <h4 class="subtitle text-center"></h4>
                             <div class="name-title justify-content-center">
-                                <h1><span>prospello technologies pvt ltd </span></h1>
+                                <h1><span>PROSPELLO COMMUNICATIONS PVT LTD</span></h1>
                             </div>
                         </div>
 
