--- a/about-company.html
+++ b/about-company.html
@@ -62,7 +62,21 @@
                     <span class="menu-icon__line"></span>
                     <span class="menu-icon__line menu-icon__line-right"></span>
                 </div>
-            </div>           
+            </div>
+
+            <div class="nav">
+                <div class="inner">
+
+                    <div class="nav__content">
+                        <address>
+                            <span>Prospello Global</span>
+                            <span>Empora View, second, near signal junction Malaparamba, Kerala 673009</span>
+                            <span>01024552406 , 01004392260</span>
+                        </address>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="site-header">
