--- a/business-3.html
+++ b/business-3.html
@@ -62,7 +62,21 @@
                     <span class="menu-icon__line"></span>
                     <span class="menu-icon__line menu-icon__line-right"></span>
                 </div>
-            </div>          
+            </div>
+
+            <div class="nav">
+                <div class="inner">
+
+                    <div class="nav__content">
+                        <address>
+                            <span>Prospello Global</span>
+                            <span>Empora View, second, near signal junction Malaparamba, Kerala 673009</span>
+                            <span>01024552406 , 01004392260</span>
+                        </address>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="site-header">
@@ -137,7 +151,7 @@
         <div class="dsn-header-height"></div>
         <!-- End Header -->
 
-        <div class="content-background"></div>
+        <!-- <div class="content-background"></div> -->
         <div class="page-content">
             <section class="content-block block-first">
 
@@ -150,11 +164,11 @@
                         <div class="col-lg-5 detl-project">
 
                             <p>Heu Learn is an innovative Education platform founded by Prospello which aims to enhance the skill
-and education of the coming generation to Ensure they learn with a goal. With innovative strategies
-heu learn provides a different learning experience to students and ensures their talents are
-enhanced. This finishing school concept of heu learn is placed to be one of the best ed start-up in
-india featured in fox interviewer and daily hunt in 2021 with its exclusive courses and innovative
-sub-domain projects</p>
+                            and education of the coming generation to Ensure they learn with a goal. With innovative strategies
+                            heu learn provides a different learning experience to students and ensures their talents are
+                            enhanced. This finishing school concept of heu learn is placed to be one of the best ed start-up in
+                            india featured in fox interviewer and daily hunt in 2021 with its exclusive courses and innovative
+                            sub-domain projects</p>
 
                             <a href="project-1.html#" target="_blank" class="t-link">
                                 <div class=""><span class="">View More</span>
