--- a/career.html
+++ b/career.html
@@ -68,7 +68,7 @@
             <div class="nav">
                 <div class="inner">
 
-                    <<div class="nav__content">
+                    <div class="nav__content">
                         <address>
                             <span>Prospello Global</span>
                             <span>Empora View, second, near signal junction Malaparamba, Kerala 673009</span>
