--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             <div class="nav">
                 <div class="inner">
 
-                    <<div class="nav__content">
+                    <div class="nav__content">
                         <address>
                             <span>Prospello Global</span>
                             <span>Empora View, second, near signal junction Malaparamba, Kerala 673009</span>
@@ -75,7 +75,6 @@
                         </address>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -132,60 +131,12 @@
                         <div class="col-12">
 
                             <div class="header-content text-center">
+                                <div class="container col-12">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.6589895861002!2d75.7985133140748!3d11.286458652659972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65fb011b4f0b9%3A0x384a8e18e4000131!2sProspello%20Global!5e0!3m2!1sen!2sin!4v1639478188887!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            </div>                            
 
-                                <div id="toggle" class="mb-30">
-                                    <div class="inner-container">
-                                        <div class="toggle">
-                                            <p>Map</p>
-                                        </div>
-                                        <div class="toggle">
-                                            <p>Info</p>
-                                        </div>
-                                    </div>
-                                    <div class="inner-container" id='toggle-container'>
-                                        <div class="toggle">
-                                            <p>Map</p>
-                                        </div>
-                                        <div class="toggle">
-                                            <p>Info</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="location__address-container">
-                                    <h5><span> Our Location</span></h5>
-                                    <div class="address-container">
-                                        <ul>
-                                            <li class="contact-info-item">
-                                                <span class="icon"></span>
-                                                <div class="">
-                                                    <span>Prospello globels <br>
-                                                        Empora View, second, near signal junction, Malaparamba, Kerala 673009
-                                                    </span>
-                                                </div>
-                                            </li>
-                                            <li class="contact-info-item">
-                                                <span>
-                                                    t:
-                                                </span>
-                                                <div class="">
-                                                    <span>+919999999</span>
-                                                </div>
-                                            </li>
-                                            <li class="contact-info-item">
-                                                <span>
-                                                    m:
-                                                </span>
-                                                <a class="c-button c-button--text c-button--bordered c-button--small"
-                                                    href="#">
-                                                    <span>hr@prospello.com</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                               
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -325,7 +276,10 @@
 
     <!-- Optional JavaScript -->
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA49hGCmzG22gXOfg784H0w8DtKEsSvq7k"></script>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      async
+    ></script> -->
     <script src="js/plugins.js"></script>
     <script src="js/dsn-grid.js"></script>
     <script src="js/custom.js"></script>
