--- a/about-company.html
+++ b/about-company.html
@@ -94,7 +94,7 @@
                         <a href="index.html">Home</a>                        
                     </li>
                     <li class="custom-drop-down">
-                        <a href="about-company.html">About</a>
+                        <a href="#">About</a>
                         <ul>
                             <li><a class="small" href="about-company.html">About Prospello</a></li>
                             <li><a class="small" href="leadership.html">Leadership Team</a></li>
@@ -275,8 +275,8 @@ that everything given by people to us is returned back double times worthier.</p
                                 <div class="client-curs">
                                     <div class="client-item">
                                         <div>
-                                            <h3>Prospello global Pvt Ltd is the principal share holding company and the promoter of all its daughter
-ventures and its group operating companies.</h3>                                            
+                                            <h5>Prospello global Pvt Ltd is the principal share holding company and the promoter of all its daughter
+ventures and its group operating companies.</h5>                                            
                                         </div>
                                     </div>
                                     
@@ -294,17 +294,17 @@ ventures and its group operating companies.</h3>
                         <div class="col-lg-10">
                             <div class="heading mb-70">
                                 <h2>ADMINISTRATION PHILOSOPHY</h2>
-                                <h4 class="space">Prospello’s Administration philosophy is developed to ensure fair, transparent, accountable and
+                                <h5 class="space">Prospello’s Administration philosophy is developed to ensure fair, transparent, accountable and
                                 ethical management in order to protect the interests of all our team members and associates
-                                including shareholders, employees, customers, vendors and society</h4><br>
-                                <h4 style="padding-bottom: 10px;">
+                                including shareholders, employees, customers, vendors and society</h5><br>
+                                <h5>
                                     Our Administration philosophy includes :</br>
 
                                     1. Prospello Global code of conduct</br>
                                     2. Prospello Business development Regulations</br>
                                     3. Prospello Employee and customer relation Terms.</br>                    
 
-                                </h4>
+                                </h5>
                                 
                             </div>
 
