--- a/career.html
+++ b/career.html
@@ -131,7 +131,7 @@
                 <div class="row align-items-center h-100">
                     <div class="col-12">
                         <div class="header-content">
-                            <h4 class="subtitle text-center">Join in De L!mra</h4>
+                            <h4 class="subtitle text-center">dolor sit amet.</h4>
                             <div class="name-title justify-content-center">
                                 <h1><span>Our Latest careers</span></h1>
                             </div>
