--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a href="index.html">Home</a>                        
                     </li>
                     <li class="custom-drop-down">
-                        <a href="about-company.html">About</a>
+                        <a href="#">About</a>
                         <ul>
                             <li><a class="small" href="about-company.html">About Prospello</a></li>
                             <li><a class="small" href="leadership.html">Leadership Team</a></li>
