--- a/leadership.html
+++ b/leadership.html
@@ -161,7 +161,7 @@
                                 <div class="bg-img cover-bg" data-image-src="images/fadil.jpg"></div>
                             </div>
                             <div class="pro-text" data-dsn-grid="move-section" data-move="5" data-duration="-100" style="margin-top: -178px">
-                                <h3 class="medium-size">FADHIL FAEZ, FOUNDER CHAIRMAN & MANAGING DIRECTOR , PROSPELLO GLOBAL</h3>
+                                <h3 class="medium-size">FADHIL FAEZ <br>CHAIRMAN & MANAGING DIRECTOR</h3>
                                 <p class="mt-30">Mr. Fadhil Mohammed (DIN 09141557) better known as fadhil faez is an young Indian entreprenuer,
 								who can be ranked among one of the youngest chairmans in india. He initiated Prospello's journey –
 								from an usual advertisement agency to an integrated group of companies diversified into various
@@ -169,6 +169,17 @@
 								various future projects like restaurant, construction, production and so one . He strives to establish
 								all the 16 visionary projects and its sub ventures of prospello global with its ever big project “ Global
 								business village” by 2040 under the banner of prospello.</p>
+                                <h5 class="my-3">Fadhil faez is also designated with following Roles :</h5>
+                                <ul>
+                                    <li>Founder and Managing Director at HeuLearn LLP</li>
+                                    <li>Co-Founder and Managing Director at Prospello Technologies Pvt Ltd</li>
+                                    <li>Co-Founder and Managing Director at Prospello Communications Pvt Ltd</li>
+                                    <li>Director at MPB Builders and Developers LLP</li>
+                                    <li>Proprietor at K&F Motors</li>
+                                    <li>President at Prospello Charitable foundation</li>
+                                    <li>Chairman at Prospello Employee Benefits and welfare commitee</li>
+                                    <li>Chairman at Prospello Career and Start-up Acceleration committee</li>                        
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -182,11 +193,18 @@
                                 <div class="bg-img cover-bg" data-image-src="images/adnan.JPG"></div>
                             </div>
                             <div class="pro-text" data-dsn-grid="move-section" data-move="5" data-duration="-100" style="margin-top: -178px">
-                                <h3 class="medium-size">ADNAN LATHEEF EKP, INDEPENDENT DIRECTOR, PROSPELLO GLOBAL</h3>
+                                <h3 class="medium-size">ADNAN LATHEEF EKP <br> INDEPENDENT DIRECTOR</h3>
                                 <p class="mt-30">Mr. Adnan Latheef is an young Indian businessman, who is extremely passionate in finance
 management of the company. He was one of the people who was there throughout Prospello's
 journey – right from an advertisement agency. He remains to be a strong pillar of the firm when it<br>comes to finance management and crisis management. His contributions to prospello always stay to
 be feeding the company in pursuing its vision much more faster and healthier</p>
+                                <h5 class="my-3">Adnan Latheef is also designated with following roles :</h5>
+                                <ul>
+                                    <li>Co-founder and Director at Prospello communications Pvt Ltd</li>
+                                    <li>Executive Member at Prospello Charitable foundation</li>
+                                    <li>Member at prospello employee benefits and welfare committee</li>
+                                    <li>Member at prospello Career and Start-up Acceleration committee</li>                                                      
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -200,7 +218,7 @@ be feeding the company in pursuing its vision much more faster and healthier</p>
                                 <div class="bg-img cover-bg" data-image-src="images/anfas.png"></div>
                             </div>
                             <div class="pro-text" data-dsn-grid="move-section" data-move="5" data-duration="-100" style="margin-top: -178px">
-                                <h3 class="medium-size">PV ANFAS, INDEPENDENT DIRECTOR, PROSPELLO GLOBAL</h3>
+                                <h3 class="medium-size">PV ANFAS <br> INDEPENDENT DIRECTOR</h3>
                                 <p class="mt-30">Mr. Pv Anfas is a Tech enthusiast who is an active member in all the management activities, a
 mathematics graduate who is extremely passionate in an entirely different department of work, sales
 and administration of the company. His contributions in the growth of Prospello are remarkable in the
@@ -208,6 +226,13 @@ history of the company and always remain to be a strong fertilizer for its futur
 development. He is the elected president of career and startup acceleration committee of prospello
 where he leads the committee to generate as much as career and start up opportunities to the
 society under the banner of prospello</p>
+                                <h5 class="my-3">Pv Anfas is also designated with following Roles:</h5>
+                                <ul>
+                                    <li>Co-founder and Director at Prospello Technologies Pvt Ltd</li>
+                                    <li>President at Prospello career and Start-up Acceleration Committee</li>
+                                    <li>Member at prospello employee benefits and welfare committee</li>
+                                    <li>Executive Member at Prospello Charitable Foundation</li>                                                      
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -221,7 +246,7 @@ society under the banner of prospello</p>
                                 <div class="bg-img cover-bg" data-image-src="images/new_yakoob.jpeg"></div>
                             </div>
                             <div class="pro-text" data-dsn-grid="move-section" data-move="5" data-duration="-100" style="margin-top: -178px">
-                                <h3 class="medium-size">YAQOOB KC, INDEPENDENT DIRECTOR, PROSPELLO GLOBAL</h3>
+                                <h3 class="medium-size">YAQOOB KC <br> INDEPENDENT DIRECTOR</h3>
                                 <p class="mt-30">Mr. Yaqoob kc is one of the most creative members in our management activities, as a person with
 more than 5 years of experience in the UX and Research industry His contributions and active
 researches on the administration and business activities of prospello is a vital part in the growth and
@@ -229,6 +254,13 @@ development of prospello global. He is the elected president of Employee benefit
 committee of prospello where he leads the committee to ensure the happiness and welfare of all our
 employees and such associates to make sure that quality employees retain for as much long as
 possible under the banner of prospello</p>
+                                <h5 class="my-3">Yaqoob kc is also designated with following Roles :</h5>
+                                <ul>
+                                    <li>Co-founder and Director at Prospello Communications Pvt Ltd</li>
+                                    <li>President at Prospello employee benefits and welfare committee</li>
+                                    <li>Member at prospello career and Start-up Acceleration Committee</li>
+                                    <li>Executive Member at Prospello Charitable Foundation</li>                                                      
+                                </ul>                               
                             </div>
                         </div>
                     </div>
@@ -242,7 +274,7 @@ possible under the banner of prospello</p>
                                 <div class="bg-img cover-bg" data-image-src="images/parabina.jpeg"></div>
                             </div>
                             <div class="pro-text" data-dsn-grid="move-section" data-move="5" data-duration="-100" style="margin-top: -178px">
-                                <h3 class="medium-size">PRABHINA , HEAD OF FINANCE DEPARTMENT, PROSPELLO GLOBAL</h3>
+                                <h3 class="medium-size">PRABHINA <br> HEAD OF FINANCE DEPARTMENT</h3>
                                 <p class="mt-30">Mrs. Prabhina is in charge of overseeing the financial transactions and activities of the company.
 She is a professional Finance Graduate With her Masters In Financial Management, she has been
 responsible in developing budgets, monitoring transactions, Contribute to financial audits,Monitor all
