--- a/contact.html
+++ b/contact.html
@@ -132,8 +132,10 @@
 
                             <div class="header-content text-center">
                                 <div class="container col-12">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.6589895861002!2d75.7985133140748!3d11.286458652659972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65fb011b4f0b9%3A0x384a8e18e4000131!2sProspello%20Global!5e0!3m2!1sen!2sin!4v1639478188887!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                            </div>                            
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.6589895861002!2d75.7985133140748!3d11.286458652659972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65fb011b4f0b9%3A0x384a8e18e4000131!2sProspello%20Global!5e0!3m2!1sen!2sin!4v1639478188887!5m2!1sen!2sin"  style="border:0; padding-left: 0;" allowfullscreen="" loading="lazy">
+                                        
+                                    </iframe>
+                                </div>                            
 
                                
                             </div>
