--- a/contact.html
+++ b/contact.html
@@ -197,17 +197,18 @@
                                                           <option value="Operation-Manager">Operation-Manager</option>
                                                     </select>
 
-                                                    <input id="form_phone" type="phone" name="phone" 
+                                                    <!-- <input id="form_phone" type="phone" name="phone" 
                                                         required="required" >
-                                                    <div class="help-block with-errors"></div>
+                                                    <div class="help-block with-errors"></div> -->
                                                 </div>
 
                                             </div>
-                                            <div class="col-lg-12">
+                                            <div class="col-lg-12" id="text-area">
                                                 <div class="form-group">
-                                                    <textarea id="form_message" class="form-control" name="message"
+                                                    <textarea id="form_message" style="width: 100%;" class="form-control" name="message"
                                                         placeholder="Reason For Appoinment" required="required"
-                                                        data-error="Please,leave us a message."></textarea>
+                                                        data-error="Please,leave us a message.">
+                                                    </textarea>
                                                     <div class="help-block with-errors"></div>
                                                 </div>
                                             </div>
