--- a/contact.html
+++ b/contact.html
@@ -185,9 +185,9 @@
                                                     <div class="help-block with-errors"></div>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-6" style="padding-top: 20px;">
                                                 <div class="form-group">
-                                                    <select name="team" class="medium-input bg-white" placeholder="Phone" data-error="select required."required="" id="id_team">
+                                                    <select name="team" class="medium-input bg-white" placeholder="Phone" data-error="select required."required="" id="id_team" style="width: 100%; border-bottom: 1px solid;">
                                                           <option value="" selected="">-- Select Team --</option>
 
                                                           <option value="Chairman">Chairman</option>
@@ -205,7 +205,7 @@
                                             </div>
                                             <div class="col-lg-12" id="text-area">
                                                 <div class="form-group">
-                                                    <textarea id="form_message" style="width: 100%;" class="form-control" name="message"
+                                                    <textarea id="form_message"  class="form-control" name="message"
                                                         placeholder="Reason For Appoinment" required="required"
                                                         data-error="Please,leave us a message.">
                                                     </textarea>
